<resources>
    <!--MainActivity/activity_main-->
    <string name="app_name">TASKY</string>
    <string name="username_hint">Usuario</string>
    <string name="password_hint">Contraseña</string>
    <string name="remember_me">Recordarme</string>
    <string name="login_button">Entrar</string>
    <string name="login_error">Usuario o contraseña incorrectos</string>

    <!--PersonalInfoActivity/activity_personal_info-->
    <string name="select_language">Selecciona idioma</string>
    <string name="back">Volver</string>
    <string name="members">Miembros</string>
    <string name="greeting">¡Hola Alumno!</string>
    <string name="profile_picture">Foto de perfil</string>
    <string name="full_name">Nombre completo</string>
    <string name="tasks_done">Tareas Hechas</string>
    <string name="score">Puntuación</string>
    <string name="tasks_pending">Tareas Pendientes</string>
    <string name="lang_spanish">Idioma Español</string>
    <string name="lang_catalan">Idioma Catalán</string>
    <string name="lang_english">Idioma Inglés</string>

    <!--ProjectsChartsActivity/activity_project_charts-->
    <string name="project_name">Proyecto 1</string>
    <string name="members_right">miembros</string>
    <string name="tab_tareas_nombre">Tareas</string>
    <string name="tab_summary_name">Resumen</string>
    <string name="graphics_zone_tittle_tasksperhour">Horas por Tareas</string>
    <string name="graphics_zone_tittle_taskstatus">Estado Tareas</string>
    <string name="graphics_zone_tittle_weeklytrend">Evolucion Semanal</string>

    <!--ProjectDetailActivity/activity_project_detail-->
    <string name="pd_title_back">Volver</string>
    <string name="pd_members">miembros</string>
    <string name="pd_tab_tasks">Tareas</string>
    <string name="pd_tab_summaries">Resumenes</string>
    <string name="pd_tasks_pending">--- Pendientes ------</string>
    <string name="pd_tasks_in_progress">--- En progreso ------</string>
    <string name="pd_tasks_done">--- Hechas ------</string>

    <!--ProjectsActivity/activity_projects-->
    <string name="pa_title_projects">Tus Proyectos</string>
    <string name="pa_tab_recent">Recientes</string>
    <string name="pa_tab_all">Todos</string>

    <!--TasksDetailActivity/activity_tasks_detail-->
    <string name="td_back">Volver</string>
    <string name="td_time">Tiempo</string>
    <string name="td_task_name">Nombre de la tarea</string>
    <string name="td_task_description">Descripción de la tarea</string>
    <string name="td_assigned_to">Asignado a:</string>
    <string name="td_dates">Desde: - Hasta: -</string>
    <string name="td_status_title">Status</string>
    <string name="td_status_not_started">Sin Empezar</string>
    <string name="td_status_in_progress">En Progreso</string>
    <string name="td_status_done">Hecho</string>
    <string name="td_resume">Reanudar</string>
    <string name="td_start">Empezar</string>
    <string name="td_terminal">Terminal</string>
    <string name="td_restart">Reiniciar</string>

    <string name="btn_finish">Terminar</string>
    <string name="btn_back_to_pending">Volver a Pendiente</string>
    <string name="tab_tasks_name">Tareas</string>


</resources>